Added the executable named exo

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,5 +9,5 @@ file(GLOB SOURCES "*.cpp")
 set(LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_DIR}/lib)
 
 add_library(biomech_exo STATIC ${SOURCES})
+add_executable(exo ${SOURCES})
 
-# add_executable(biomech_exo ${SOURCES})
