Added test framework

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,8 +2,8 @@ cmake_minimum_required (VERSION 2.8.3)
 project (biomech_exo)
 add_compile_options(-std=c++11)
 
+
 include_directories(./)
-#set(SOURCES main.cpp)
 file(GLOB SOURCES "*.cpp")
 
 set(LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_DIR}/lib)
@@ -11,3 +11,9 @@ set(LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_DIR}/lib)
 add_library(biomech_exo STATIC ${SOURCES})
 add_executable(exo ${SOURCES})
 
+if (test)
+  include(CTest)
+  add_subdirectory(lib/gtest)
+  enable_testing()
+  add_subdirectory(test)
+endif()
