Added min class tests

--- a/test/tests/utils/CMakeLists.txt
+++ b/test/tests/utils/CMakeLists.txt
@@ -17,7 +17,12 @@ include_directories(${gtest_SOURCE_DIR}/include ${gtest_SOURCE_DIR})
 
 add_executable(test_utils_range testRange.cpp)
 target_link_libraries(test_utils_range gtest gtest_main biomech_exo)
+gtest_add_tests(test_utils_range "" AUTO)
+
 add_executable(test_utils_max testMax.cpp)
 target_link_libraries(test_utils_max gtest gtest_main biomech_exo)
-gtest_add_tests(test_utils_range "" AUTO)
 gtest_add_tests(test_utils_max "" AUTO)
+
+add_executable(test_utils_min testMin.cpp)
+target_link_libraries(test_utils_min gtest gtest_main biomech_exo)
+gtest_add_tests(test_utils_min "" AUTO)
