Changed test option to be called build tests

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,7 +11,8 @@ set(LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_DIR}/lib)
 add_library(biomech_exo STATIC ${SOURCES})
 add_executable(exo ${SOURCES})
 
-if (test)
+option(BUILD_TESTS "Enable testing" OFF)
+if (BUILD_TESTS)
   include(CTest)
   add_subdirectory(lib/gtest)
   enable_testing()
