--- a/test/tests/utils/CMakeLists.txt
+++ b/test/tests/utils/CMakeLists.txt
@@ -13,14 +13,14 @@ include_directories(${gtest_SOURCE_DIR}/include ${gtest_SOURCE_DIR})
 ################################
 # Link test executable against gtest & gtest_main
 
-add_executable(test_utils_range testRange.cpp)
-target_link_libraries(test_utils_range gtest gtest_main biomech_exo)
-gtest_add_tests(test_utils_range "" AUTO)
+add_executable(${PROJECT_NAME}_range testRange.cpp)
+target_link_libraries(${PROJECT_NAME}_range gtest gtest_main biomech_exo)
+gtest_add_tests(${PROJECT_NAME}_range "" AUTO)
 
-add_executable(test_utils_max testMax.cpp)
-target_link_libraries(test_utils_max gtest gtest_main biomech_exo)
-gtest_add_tests(test_utils_max "" AUTO)
+add_executable(${PROJECT_NAME}_max testMax.cpp)
+target_link_libraries(${PROJECT_NAME}_max gtest gtest_main biomech_exo)
+gtest_add_tests(${PROJECT_NAME}_max "" AUTO)
 
-add_executable(test_utils_min testMin.cpp)
-target_link_libraries(test_utils_min gtest gtest_main biomech_exo)
-gtest_add_tests(test_utils_min "" AUTO)
+add_executable(${PROJECT_NAME}_min testMin.cpp)
+target_link_libraries(${PROJECT_NAME}_min gtest gtest_main biomech_exo)
+gtest_add_tests(${PROJECT_NAME}_min "" AUTO)
