created files for config parsing

--- a/config.ini
+++ b/config.ini
@@ -1,4 +1,5 @@
 ;board information
+; ALL FIELDS SHOULD BE LESS THAN 25 CHAR
 [Board]
 	name = AK_Board
 	version = 0.1
@@ -12,6 +13,20 @@
 
 	;joints used and their motor name, 0 not used, ak60 and ak80 are the two CAN motors future motors or joints can be added.
 	hip = AK60
+	knee = 0
+	ankle = AK80
+
+	; the default controller, 0 off, other names can be added if you want to run without connecting to the GUI
+	hipDefaultController = 0
+	kneeDefaultController = 0
+	ankleDefaultController = 0
+
+[bilateralAnkle]
+	sides = bilateral
+	;sides - left, right, bilateral
+
+	;joints used and their motor name, 0 not used, ak60 and ak80 are the two CAN motors future motors or joints can be added.
+	hip = 0
 	knee = 0
 	ankle = AK80
 
