--- a/config.ini
+++ b/config.ini
@@ -6,6 +6,10 @@
 
 [Exo]
 	name = bilateralHipAnkle
+    
+[Battery]
+    name = dumb
+    ;battery - smart, dumb
 
 [bilateralHipAnkle]
 	sides = bilateral
