added unilateral hip ankle

--- a/config.ini
+++ b/config.ini
@@ -24,6 +24,20 @@
 	hipDefaultController = 0
 	kneeDefaultController = 0
 	ankleDefaultController = 0
+    
+[bilateralHip]
+	sides = bilateral
+	;sides - left, right, bilateral
+
+	;joints used and their motor name, 0 not used, ak60 and ak80 are the two CAN motors future motors or joints can be added.
+	hip = AK60
+	knee = 0
+	ankle = 0
+
+	; the default controller, 0 off, other names can be added if you want to run without connecting to the GUI
+	hipDefaultController = 0
+	kneeDefaultController = 0
+	ankleDefaultController = 0    
 
 [bilateralAnkle]
 	sides = bilateral
@@ -38,3 +52,31 @@
 	hipDefaultController = 0
 	kneeDefaultController = 0
 	ankleDefaultController = 0
+    
+[leftHipAnkle]
+	sides = left
+	;sides - left, right, bilateral
+
+	;joints used and their motor name, 0 not used, ak60 and ak80 are the two CAN motors future motors or joints can be added.
+	hip = AK60
+	knee = 0
+	ankle = AK60
+
+	; the default controller, 0 off, other names can be added if you want to run without connecting to the GUI
+	hipDefaultController = 0
+	kneeDefaultController = 0
+	ankleDefaultController = 0   
+
+[rightHipAnkle]
+	sides = right
+	;sides - left, right, bilateral
+
+	;joints used and their motor name, 0 not used, ak60 and ak80 are the two CAN motors future motors or joints can be added.
+	hip = AK60
+	knee = 0
+	ankle = AK60
+
+	; the default controller, 0 off, other names can be added if you want to run without connecting to the GUI
+	hipDefaultController = 0
+	kneeDefaultController = 0
+	ankleDefaultController = 0      
