--- a/config.ini
+++ b/config.ini
@@ -35,7 +35,7 @@
 	ankle = 0
 
 	; the default controller, 0 off, other names can be added if you want to run without connecting to the GUI
-	hipDefaultController = 0
+	hipDefaultController = extensionAngle
 	kneeDefaultController = 0
 	ankleDefaultController = 0    
 
