added direction correction for joint mirroring

--- a/config.ini
+++ b/config.ini
@@ -5,7 +5,7 @@
 	version = 0.1
 
 [Exo]
-	name = leftHipAnkle
+	name = bilateralHip
     
 [Battery]
     name = dumb
@@ -25,6 +25,11 @@
 	kneeDefaultController = 0
 	ankleDefaultController = 0
     
+    ; filp direction for the torque and angles, 0 neither, left, right, both
+	hipFlipDir = right
+	kneeFlipDir = 0
+	ankleFlipDir = 0
+    
 [bilateralHip]
 	sides = bilateral
 	;sides - left, right, bilateral
@@ -39,6 +44,11 @@
 	kneeDefaultController = 0
 	ankleDefaultController = 0    
 
+    ; filp direction for the torque and angles, 0 neither, left, right, both
+	hipFlipDir = right
+	kneeFlipDir = 0
+	ankleFlipDir = 0
+    
 [bilateralAnkle]
 	sides = bilateral
 	;sides - left, right, bilateral
@@ -53,6 +63,12 @@
 	kneeDefaultController = 0
 	ankleDefaultController = 0
     
+    
+    ; filp direction for the torque and angles, 0 neither, left, right, both
+	hipFlipDir = right
+	kneeFlipDir = 0
+	ankleFlipDir = 0
+    
 [leftHipAnkle]
 	sides = left
 	;sides - left, right, bilateral
@@ -65,7 +81,12 @@
 	; the default controller, 0 off, other names can be added if you want to run without connecting to the GUI
 	hipDefaultController = 0
 	kneeDefaultController = 0
-	ankleDefaultController = 0   
+	ankleDefaultController = 0  
+
+    ; filp direction for the torque and angles, 0 neither, left, right, both
+	hipFlipDir = right
+	kneeFlipDir = 0
+	ankleFlipDir = 0    
 
 [rightHipAnkle]
 	sides = right
@@ -80,3 +101,8 @@
 	hipDefaultController = 0
 	kneeDefaultController = 0
 	ankleDefaultController = 0      
+    
+    ; filp direction for the torque and angles, 0 neither, left, right, both
+	hipFlipDir = right
+	kneeFlipDir = 0
+	ankleFlipDir = 0
