added battery and gearing to config

--- a/config.ini
+++ b/config.ini
@@ -9,7 +9,7 @@
     
 [Battery]
     name = dumb
-    ;battery - smart, dumb
+    ; describes the type of battery used, values: smart(inspired energy), dumb (simple lipo)
 
 [bilateralHipAnkle]
 	sides = bilateral
@@ -19,6 +19,11 @@
 	hip = AK60
 	knee = 0
 	ankle = AK80
+    
+    ;joint gear ratio, velocity of driving member(motor)/velocity of the driven member (output shaft), assumes constant gearing ratio.  If the motor spins 6 revolutions to 1 revolution of the output this value would be 6.
+	hipGearRatio = 1
+	kneeGearRatio = 1
+	ankleGearRatio = 1
 
 	; the default controller, 0 off, other names can be added if you want to run without connecting to the GUI
 	hipDefaultController = 0
@@ -38,6 +43,11 @@
 	hip = AK60
 	knee = 0
 	ankle = 0
+    
+    ;joint gear ratio, velocity of driving member(motor)/velocity of the driven member (output shaft), assumes constant gearing ratio.  If the motor spins 6 revolutions to 1 revolution of the output this value would be 6.
+	hipGearRatio = 1
+	kneeGearRatio = 1
+	ankleGearRatio = 1
 
 	; the default controller, 0 off, other names can be added if you want to run without connecting to the GUI
 	hipDefaultController = extensionAngle
@@ -57,6 +67,11 @@
 	hip = 0
 	knee = 0
 	ankle = AK80
+    
+    ;joint gear ratio, velocity of driving member(motor)/velocity of the driven member (output shaft), assumes constant gearing ratio.  If the motor spins 6 revolutions to 1 revolution of the output this value would be 6.
+	hipGearRatio = 1
+	kneeGearRatio = 1
+	ankleGearRatio = 1
 
 	; the default controller, 0 off, other names can be added if you want to run without connecting to the GUI
 	hipDefaultController = 0
@@ -82,6 +97,11 @@
 	hipDefaultController = 0
 	kneeDefaultController = 0
 	ankleDefaultController = 0  
+    
+    ;joint gear ratio, velocity of driving member(motor)/velocity of the driven member (output shaft), assumes constant gearing ratio.  If the motor spins 6 revolutions to 1 revolution of the output this value would be 6.
+	hipGearRatio = 1
+	kneeGearRatio = 1
+	ankleGearRatio = 1
 
     ; filp direction for the torque and angles, 0 neither, left, right, both
 	hipFlipDir = right
@@ -100,7 +120,12 @@
 	; the default controller, 0 off, other names can be added if you want to run without connecting to the GUI
 	hipDefaultController = 0
 	kneeDefaultController = 0
-	ankleDefaultController = 0      
+	ankleDefaultController = 0    
+    
+    ;joint gear ratio, velocity of driving member(motor)/velocity of the driven member (output shaft), assumes constant gearing ratio.  If the motor spins 6 revolutions to 1 revolution of the output this value would be 6.
+	hipGearRatio = 1
+	kneeGearRatio = 1
+	ankleGearRatio = 1  
     
     ; filp direction for the torque and angles, 0 neither, left, right, both
 	hipFlipDir = right
