tried to recover from G drive loss, added 2:1 gearing

--- a/config.ini
+++ b/config.ini
@@ -21,6 +21,7 @@
 	ankle = AK80
     
     ;joint gear ratio, velocity of driving member(motor)/velocity of the driven member (output shaft), assumes constant gearing ratio.  If the motor spins 6 revolutions to 1 revolution of the output this value would be 6.
+    ; values 1, 2, 3,
 	hipGearRatio = 1
 	kneeGearRatio = 1
 	ankleGearRatio = 1
@@ -45,7 +46,8 @@
 	ankle = 0
     
     ;joint gear ratio, velocity of driving member(motor)/velocity of the driven member (output shaft), assumes constant gearing ratio.  If the motor spins 6 revolutions to 1 revolution of the output this value would be 6.
-	hipGearRatio = 1
+	; values 1, 2, 3,
+    hipGearRatio = 1
 	kneeGearRatio = 1
 	ankleGearRatio = 1
 
@@ -69,6 +71,7 @@
 	ankle = AK80
     
     ;joint gear ratio, velocity of driving member(motor)/velocity of the driven member (output shaft), assumes constant gearing ratio.  If the motor spins 6 revolutions to 1 revolution of the output this value would be 6.
+    ; values 1, 2, 3,
 	hipGearRatio = 1
 	kneeGearRatio = 1
 	ankleGearRatio = 1
@@ -99,6 +102,7 @@
 	ankleDefaultController = 0  
     
     ;joint gear ratio, velocity of driving member(motor)/velocity of the driven member (output shaft), assumes constant gearing ratio.  If the motor spins 6 revolutions to 1 revolution of the output this value would be 6.
+    ; values 1, 2, 3,
 	hipGearRatio = 1
 	kneeGearRatio = 1
 	ankleGearRatio = 1
@@ -123,6 +127,7 @@
 	ankleDefaultController = 0    
     
     ;joint gear ratio, velocity of driving member(motor)/velocity of the driven member (output shaft), assumes constant gearing ratio.  If the motor spins 6 revolutions to 1 revolution of the output this value would be 6.
+    ; values 1, 2, 3,
 	hipGearRatio = 1
 	kneeGearRatio = 1
 	ankleGearRatio = 1  
