--- a/config.ini
+++ b/config.ini
@@ -16,6 +16,7 @@
 	;sides - left, right, bilateral
 
 	;joints used and their motor name, 0 not used, ak60 and ak80 are the two CAN motors future motors or joints can be added.
+    ; values 0(not used), AK60, AK80, AK60v1.1,
 	hip = AK60
 	knee = 0
 	ankle = AK80
@@ -41,6 +42,7 @@
 	;sides - left, right, bilateral
 
 	;joints used and their motor name, 0 not used, ak60 and ak80 are the two CAN motors future motors or joints can be added.
+    ; values 0(not used), AK60, AK80, AK60v1.1,
 	hip = AK60
 	knee = 0
 	ankle = 0
@@ -52,7 +54,7 @@
 	ankleGearRatio = 1
 
 	; the default controller, 0 off, other names can be added if you want to run without connecting to the GUI
-	hipDefaultController = extensionAngle
+	hipDefaultController = 0
 	kneeDefaultController = 0
 	ankleDefaultController = 0    
 
@@ -66,6 +68,7 @@
 	;sides - left, right, bilateral
 
 	;joints used and their motor name, 0 not used, ak60 and ak80 are the two CAN motors future motors or joints can be added.
+    ; values 0(not used), AK60, AK80, AK60v1.1,
 	hip = 0
 	knee = 0
 	ankle = AK80
@@ -92,6 +95,7 @@
 	;sides - left, right, bilateral
 
 	;joints used and their motor name, 0 not used, ak60 and ak80 are the two CAN motors future motors or joints can be added.
+    ; values 0(not used), AK60, AK80, AK60v1.1,
 	hip = AK60
 	knee = 0
 	ankle = AK60
@@ -117,6 +121,7 @@
 	;sides - left, right, bilateral
 
 	;joints used and their motor name, 0 not used, ak60 and ak80 are the two CAN motors future motors or joints can be added.
+    ; values 0(not used), AK60, AK80, AK60v1.1,
 	hip = AK60
 	knee = 0
 	ankle = AK60
