--- a/config.ini
+++ b/config.ini
@@ -11,6 +11,34 @@
     name = dumb
     ; describes the type of battery used, values: smart(inspired energy), dumb (simple lipo)
 
+[test]
+	sides = left
+	;sides - left, right, bilateral
+
+	;joints used and their motor name, 0 not used, ak60 and ak80 are the two CAN motors future motors or joints can be added.
+    ; values 0(not used), AK60, AK80, AK60v1.1,
+	hip = AK60
+	knee = 0
+	ankle = 0
+    
+    ;joint gear ratio, velocity of driving member(motor)/velocity of the driven member (output shaft), assumes constant gearing ratio.  If the motor spins 6 revolutions to 1 revolution of the output this value would be 6.
+    ; values 1, 2, 3,
+	hipGearRatio = 1
+	kneeGearRatio = 1
+	ankleGearRatio = 1
+
+	; the default controller, 0 off, other names can be added if you want to run without connecting to the GUI
+	hipDefaultController = 0
+	kneeDefaultController = 0
+	ankleDefaultController = 0
+    
+    ; filp direction for the torque and angles, 0 neither, left, right, both
+	hipFlipDir = left
+	kneeFlipDir = 0
+	ankleFlipDir = 0
+
+
+
 [bilateralHipAnkle]
 	sides = bilateral
 	;sides - left, right, bilateral
