added sine controller and loop speed test

--- a/config.ini
+++ b/config.ini
@@ -5,21 +5,21 @@
 	version = 0.1
 
 [Exo]
-	name = bilateralHip
+	name = test
     
 [Battery]
     name = dumb
     ; describes the type of battery used, values: smart(inspired energy), dumb (simple lipo)
 
 [test]
-	sides = left
+	sides = bilateral
 	;sides - left, right, bilateral
 
 	;joints used and their motor name, 0 not used, ak60 and ak80 are the two CAN motors future motors or joints can be added.
     ; values 0(not used), AK60, AK80, AK60v1.1,
 	hip = AK60
 	knee = 0
-	ankle = 0
+	ankle = AK80
     
     ;joint gear ratio, velocity of driving member(motor)/velocity of the driven member (output shaft), assumes constant gearing ratio.  If the motor spins 6 revolutions to 1 revolution of the output this value would be 6.
     ; values 1, 2, 3,
