Updated for SD based control and individual ankle Config

--- a/SDCard/config.ini
+++ b/SDCard/config.ini
@@ -124,14 +124,14 @@
 
 	;joints used and their motor name, 0 not used, ak60 and ak80 are the two CAN motors future motors or joints can be added.
     ; values 0(not used), AK60, AK80, AK60v1.1,
-	hip = AK60
+	hip = AK60v1.1
 	knee = 0
-	ankle = AK60
+	ankle = AK60v1.1
 
 	; the default controller, 0 off, other names can be added if you want to run without connecting to the GUI
-	hipDefaultController = 0
+	hipDefaultController = bangBang
 	kneeDefaultController = 0
-	ankleDefaultController = 0  
+	ankleDefaultController = PJMC  
     
     ;joint gear ratio, velocity of driving member(motor)/velocity of the driven member (output shaft), assumes constant gearing ratio.  If the motor spins 6 revolutions to 1 revolution of the output this value would be 6.
     ; values 1, 2, 3,
@@ -142,7 +142,7 @@
     ; filp direction for the torque and angles, 0 neither, left, right, both
 	hipFlipDir = right
 	kneeFlipDir = 0
-	ankleFlipDir = 0    
+	ankleFlipDir = 0   
 
 [rightHipAnkle]
 	sides = right
@@ -150,14 +150,14 @@
 
 	;joints used and their motor name, 0 not used, ak60 and ak80 are the two CAN motors future motors or joints can be added.
     ; values 0(not used), AK60, AK80, AK60v1.1,
-	hip = AK60
+	hip = AK60v1.1
 	knee = 0
-	ankle = AK60
+	ankle = AK60v1.1
 
 	; the default controller, 0 off, other names can be added if you want to run without connecting to the GUI
-	hipDefaultController = 0
+	hipDefaultController = bangBang
 	kneeDefaultController = 0
-	ankleDefaultController = 0    
+	ankleDefaultController = PJMC    
     
     ;joint gear ratio, velocity of driving member(motor)/velocity of the driven member (output shaft), assumes constant gearing ratio.  If the motor spins 6 revolutions to 1 revolution of the output this value would be 6.
     ; values 1, 2, 3,
@@ -221,3 +221,55 @@
 	hipFlipDir = right
 	kneeFlipDir = 0
 	ankleFlipDir = 0  
+    
+    [leftAnkle]
+	sides = left
+	;sides - left, right, bilateral
+
+	;joints used and their motor name, 0 not used, ak60 and ak80 are the two CAN motors future motors or joints can be added.
+    ; values 0(not used), AK60, AK80, AK60v1.1,
+	hip = 0
+	knee = 0
+	ankle = AK60v1.1
+
+	; the default controller, 0 off, other names can be added if you want to run without connecting to the GUI
+	hipDefaultController = 0
+	kneeDefaultController = 0
+	ankleDefaultController = 0  
+    
+    ;joint gear ratio, velocity of driving member(motor)/velocity of the driven member (output shaft), assumes constant gearing ratio.  If the motor spins 6 revolutions to 1 revolution of the output this value would be 6.
+    ; values 1, 2, 3,
+	hipGearRatio = 1
+	kneeGearRatio = 1
+	ankleGearRatio = 1
+
+    ; filp direction for the torque and angles, 0 neither, left, right, both
+	hipFlipDir = right
+	kneeFlipDir = 0
+	ankleFlipDir = right    
+
+    [rightAnkle]
+	sides = right
+	;sides - left, right, bilateral
+
+	;joints used and their motor name, 0 not used, ak60 and ak80 are the two CAN motors future motors or joints can be added.
+    ; values 0(not used), AK60, AK80, AK60v1.1,
+	hip = 0
+	knee = 0
+	ankle = AK60v1.1
+
+	; the default controller, 0 off, other names can be added if you want to run without connecting to the GUI
+	hipDefaultController = 0
+	kneeDefaultController = 0
+	ankleDefaultController = 0    
+    
+    ;joint gear ratio, velocity of driving member(motor)/velocity of the driven member (output shaft), assumes constant gearing ratio.  If the motor spins 6 revolutions to 1 revolution of the output this value would be 6.
+    ; values 1, 2, 3,
+	hipGearRatio = 1
+	kneeGearRatio = 1
+	ankleGearRatio = 1  
+    
+    ; filp direction for the torque and angles, 0 neither, left, right, both
+	hipFlipDir = right
+	kneeFlipDir = 0
+	ankleFlipDir = right
