added gearing ratio for ankle

--- a/SDCard/config.ini
+++ b/SDCard/config.ini
@@ -5,7 +5,7 @@
 	version = 0.1
 
 [Exo]
-	name = leftHip
+	name = bilateralHip
     
 [Battery]
     name = dumb
@@ -25,7 +25,7 @@
     ; values 1, 2, 3,
 	hipGearRatio = 1
 	kneeGearRatio = 1
-	ankleGearRatio = 1
+	ankleGearRatio = 4.5
 
 	; the default controller, 0 off, other names can be added if you want to run without connecting to the GUI
 	hipDefaultController = 0
@@ -45,20 +45,20 @@
 
 	;joints used and their motor name, 0 not used, ak60 and ak80 are the two CAN motors future motors or joints can be added.
     ; values 0(not used), AK60, AK80, AK60v1.1,
-	hip = AK60
+	hip = AK60v1.1
 	knee = 0
-	ankle = AK80
+	ankle = AK60v1.1
     
     ;joint gear ratio, velocity of driving member(motor)/velocity of the driven member (output shaft), assumes constant gearing ratio.  If the motor spins 6 revolutions to 1 revolution of the output this value would be 6.
     ; values 1, 2, 3,
 	hipGearRatio = 1
 	kneeGearRatio = 1
-	ankleGearRatio = 1
+	ankleGearRatio = 4.5
 
 	; the default controller, 0 off, other names can be added if you want to run without connecting to the GUI
-	hipDefaultController = 0
+	hipDefaultController = bangBang
 	kneeDefaultController = 0
-	ankleDefaultController = 0
+	ankleDefaultController = PJMC
     
     ; filp direction for the torque and angles, 0 neither, left, right, both
 	hipFlipDir = right
@@ -71,7 +71,7 @@
 
 	;joints used and their motor name, 0 not used, ak60 and ak80 are the two CAN motors future motors or joints can be added.
     ; values 0(not used), AK60, AK80, AK60v1.1,
-	hip = AK60
+	hip = AK60v1.1
 	knee = 0
 	ankle = 0
     
@@ -79,10 +79,10 @@
 	; values 1, 2, 3,
     hipGearRatio = 1
 	kneeGearRatio = 1
-	ankleGearRatio = 1
+	ankleGearRatio = 4.5
 
 	; the default controller, 0 off, other names can be added if you want to run without connecting to the GUI
-	hipDefaultController = 0
+	hipDefaultController = bangBang
 	kneeDefaultController = 0
 	ankleDefaultController = 0    
 
@@ -105,12 +105,12 @@
     ; values 1, 2, 3,
 	hipGearRatio = 1
 	kneeGearRatio = 1
-	ankleGearRatio = 1
+	ankleGearRatio = 4.5
 
 	; the default controller, 0 off, other names can be added if you want to run without connecting to the GUI
 	hipDefaultController = 0
 	kneeDefaultController = 0
-	ankleDefaultController = 0
+	ankleDefaultController = PJMC
     
     
     ; filp direction for the torque and angles, 0 neither, left, right, both
@@ -137,7 +137,7 @@
     ; values 1, 2, 3,
 	hipGearRatio = 1
 	kneeGearRatio = 1
-	ankleGearRatio = 1
+	ankleGearRatio = 4.5
 
     ; filp direction for the torque and angles, 0 neither, left, right, both
 	hipFlipDir = right
@@ -163,25 +163,25 @@
     ; values 1, 2, 3,
 	hipGearRatio = 1
 	kneeGearRatio = 1
-	ankleGearRatio = 1  
+	ankleGearRatio = 4.5  
     
     ; filp direction for the torque and angles, 0 neither, left, right, both
 	hipFlipDir = right
 	kneeFlipDir = 0
 	ankleFlipDir = 0
     
-    [leftHip]
+[leftHip]
 	sides = left
 	;sides - left, right, bilateral
 
 	;joints used and their motor name, 0 not used, ak60 and ak80 are the two CAN motors future motors or joints can be added.
     ; values 0(not used), AK60, AK80, AK60v1.1,
-	hip = AK60
+	hip = AK60v1.1
 	knee = 0
 	ankle = 0
 
 	; the default controller, 0 off, other names can be added if you want to run without connecting to the GUI
-	hipDefaultController = 0
+	hipDefaultController = bangBang
 	kneeDefaultController = 0
 	ankleDefaultController = 0  
     
@@ -189,25 +189,25 @@
     ; values 1, 2, 3,
 	hipGearRatio = 1
 	kneeGearRatio = 1
-	ankleGearRatio = 1
+	ankleGearRatio = 4.5
 
     ; filp direction for the torque and angles, 0 neither, left, right, both
 	hipFlipDir = right
 	kneeFlipDir = 0
 	ankleFlipDir = 0   
     
-    [rightHip]
+[rightHip]
 	sides = right
 	;sides - left, right, bilateral
 
 	;joints used and their motor name, 0 not used, ak60 and ak80 are the two CAN motors future motors or joints can be added.
     ; values 0(not used), AK60, AK80, AK60v1.1,
-	hip = AK60
+	hip = AK60v1.1
 	knee = 0
 	ankle = 0
 
 	; the default controller, 0 off, other names can be added if you want to run without connecting to the GUI
-	hipDefaultController = 0
+	hipDefaultController = bangBang
 	kneeDefaultController = 0
 	ankleDefaultController = 0  
     
@@ -215,14 +215,14 @@
     ; values 1, 2, 3,
 	hipGearRatio = 1
 	kneeGearRatio = 1
-	ankleGearRatio = 1
+	ankleGearRatio = 4.5
 
     ; filp direction for the torque and angles, 0 neither, left, right, both
 	hipFlipDir = right
 	kneeFlipDir = 0
 	ankleFlipDir = 0  
     
-    [leftAnkle]
+[leftAnkle]
 	sides = left
 	;sides - left, right, bilateral
 
@@ -235,20 +235,20 @@
 	; the default controller, 0 off, other names can be added if you want to run without connecting to the GUI
 	hipDefaultController = 0
 	kneeDefaultController = 0
-	ankleDefaultController = 0  
+	ankleDefaultController = PJMC  
     
     ;joint gear ratio, velocity of driving member(motor)/velocity of the driven member (output shaft), assumes constant gearing ratio.  If the motor spins 6 revolutions to 1 revolution of the output this value would be 6.
     ; values 1, 2, 3,
 	hipGearRatio = 1
 	kneeGearRatio = 1
-	ankleGearRatio = 1
+	ankleGearRatio = 4.5
 
     ; filp direction for the torque and angles, 0 neither, left, right, both
 	hipFlipDir = right
 	kneeFlipDir = 0
 	ankleFlipDir = right    
 
-    [rightAnkle]
+[rightAnkle]
 	sides = right
 	;sides - left, right, bilateral
 
@@ -261,13 +261,13 @@
 	; the default controller, 0 off, other names can be added if you want to run without connecting to the GUI
 	hipDefaultController = 0
 	kneeDefaultController = 0
-	ankleDefaultController = 0    
+	ankleDefaultController = PJMC    
     
     ;joint gear ratio, velocity of driving member(motor)/velocity of the driven member (output shaft), assumes constant gearing ratio.  If the motor spins 6 revolutions to 1 revolution of the output this value would be 6.
     ; values 1, 2, 3,
 	hipGearRatio = 1
 	kneeGearRatio = 1
-	ankleGearRatio = 1  
+	ankleGearRatio = 4.5  
     
     ; filp direction for the torque and angles, 0 neither, left, right, both
 	hipFlipDir = right
