added ankle flip dir to bilateral hip ankle

--- a/SDCard/config.ini
+++ b/SDCard/config.ini
@@ -63,7 +63,7 @@
     ; filp direction for the torque and angles, 0 neither, left, right, both
 	hipFlipDir = right
 	kneeFlipDir = 0
-	ankleFlipDir = 0
+	ankleFlipDir = right
     
 [bilateralHip]
 	sides = bilateral
