added comment about gearing being post output shaft

--- a/SDCard/config.ini
+++ b/SDCard/config.ini
@@ -22,7 +22,8 @@
 	ankle = 0
     
     ;joint gear ratio, velocity of driving member(motor)/velocity of the driven member (output shaft), assumes constant gearing ratio.  If the motor spins 6 revolutions to 1 revolution of the output this value would be 6.
-    ; values 1, 2, 3,
+    ; This is for transmission gearing after the motor output shaft.  If the Motor has a built in gearing that should be part of the motor class.
+    ; values 1, 2, 3, 4.5,
 	hipGearRatio = 1
 	kneeGearRatio = 1
 	ankleGearRatio = 4.5
@@ -50,7 +51,8 @@
 	ankle = AK60v1.1
     
     ;joint gear ratio, velocity of driving member(motor)/velocity of the driven member (output shaft), assumes constant gearing ratio.  If the motor spins 6 revolutions to 1 revolution of the output this value would be 6.
-    ; values 1, 2, 3,
+    ; This is for transmission gearing after the motor output shaft.  If the Motor has a built in gearing that should be part of the motor class.
+    ; values 1, 2, 3, 4.5,
 	hipGearRatio = 1
 	kneeGearRatio = 1
 	ankleGearRatio = 4.5
@@ -70,13 +72,14 @@
 	;sides - left, right, bilateral
 
 	;joints used and their motor name, 0 not used, ak60 and ak80 are the two CAN motors future motors or joints can be added.
+    ; This is for transmission gearing after the motor output shaft.  If the Motor has a built in gearing that should be part of the motor class.
     ; values 0(not used), AK60, AK80, AK60v1.1,
 	hip = AK60v1.1
 	knee = 0
 	ankle = 0
     
     ;joint gear ratio, velocity of driving member(motor)/velocity of the driven member (output shaft), assumes constant gearing ratio.  If the motor spins 6 revolutions to 1 revolution of the output this value would be 6.
-	; values 1, 2, 3,
+	; values 1, 2, 3, 4.5,
     hipGearRatio = 1
 	kneeGearRatio = 1
 	ankleGearRatio = 4.5
@@ -102,7 +105,8 @@
 	ankle = AK80
     
     ;joint gear ratio, velocity of driving member(motor)/velocity of the driven member (output shaft), assumes constant gearing ratio.  If the motor spins 6 revolutions to 1 revolution of the output this value would be 6.
-    ; values 1, 2, 3,
+    ; This is for transmission gearing after the motor output shaft.  If the Motor has a built in gearing that should be part of the motor class.
+    ; values 1, 2, 3, 4.5,
 	hipGearRatio = 1
 	kneeGearRatio = 1
 	ankleGearRatio = 4.5
@@ -134,7 +138,8 @@
 	ankleDefaultController = PJMC  
     
     ;joint gear ratio, velocity of driving member(motor)/velocity of the driven member (output shaft), assumes constant gearing ratio.  If the motor spins 6 revolutions to 1 revolution of the output this value would be 6.
-    ; values 1, 2, 3,
+    ; This is for transmission gearing after the motor output shaft.  If the Motor has a built in gearing that should be part of the motor class.
+    ; values 1, 2, 3, 4.5,
 	hipGearRatio = 1
 	kneeGearRatio = 1
 	ankleGearRatio = 4.5
@@ -160,7 +165,8 @@
 	ankleDefaultController = PJMC    
     
     ;joint gear ratio, velocity of driving member(motor)/velocity of the driven member (output shaft), assumes constant gearing ratio.  If the motor spins 6 revolutions to 1 revolution of the output this value would be 6.
-    ; values 1, 2, 3,
+    ; This is for transmission gearing after the motor output shaft.  If the Motor has a built in gearing that should be part of the motor class.
+    ; values 1, 2, 3, 4.5,
 	hipGearRatio = 1
 	kneeGearRatio = 1
 	ankleGearRatio = 4.5  
@@ -186,7 +192,8 @@
 	ankleDefaultController = 0  
     
     ;joint gear ratio, velocity of driving member(motor)/velocity of the driven member (output shaft), assumes constant gearing ratio.  If the motor spins 6 revolutions to 1 revolution of the output this value would be 6.
-    ; values 1, 2, 3,
+    ; This is for transmission gearing after the motor output shaft.  If the Motor has a built in gearing that should be part of the motor class.
+    ; values 1, 2, 3, 4.5,
 	hipGearRatio = 1
 	kneeGearRatio = 1
 	ankleGearRatio = 4.5
@@ -212,7 +219,8 @@
 	ankleDefaultController = 0  
     
     ;joint gear ratio, velocity of driving member(motor)/velocity of the driven member (output shaft), assumes constant gearing ratio.  If the motor spins 6 revolutions to 1 revolution of the output this value would be 6.
-    ; values 1, 2, 3,
+    ; This is for transmission gearing after the motor output shaft.  If the Motor has a built in gearing that should be part of the motor class.
+    ; values 1, 2, 3, 4.5,
 	hipGearRatio = 1
 	kneeGearRatio = 1
 	ankleGearRatio = 4.5
@@ -238,7 +246,8 @@
 	ankleDefaultController = PJMC  
     
     ;joint gear ratio, velocity of driving member(motor)/velocity of the driven member (output shaft), assumes constant gearing ratio.  If the motor spins 6 revolutions to 1 revolution of the output this value would be 6.
-    ; values 1, 2, 3,
+    ; This is for transmission gearing after the motor output shaft.  If the Motor has a built in gearing that should be part of the motor class.
+    ; values 1, 2, 3, 4.5,
 	hipGearRatio = 1
 	kneeGearRatio = 1
 	ankleGearRatio = 4.5
@@ -264,7 +273,8 @@
 	ankleDefaultController = PJMC    
     
     ;joint gear ratio, velocity of driving member(motor)/velocity of the driven member (output shaft), assumes constant gearing ratio.  If the motor spins 6 revolutions to 1 revolution of the output this value would be 6.
-    ; values 1, 2, 3,
+    ; This is for transmission gearing after the motor output shaft.  If the Motor has a built in gearing that should be part of the motor class.
+    ; values 1, 2, 3, 4.5,
 	hipGearRatio = 1
 	kneeGearRatio = 1
 	ankleGearRatio = 4.5  
