--- a/SDCard/config.ini
+++ b/SDCard/config.ini
@@ -29,6 +29,9 @@
 	ankleGearRatio = 4.5
 
 	; the default controller, 0 off, other names can be added if you want to run without connecting to the GUI
+	; Hip Controllers: zeroTorque, heelToe, extensionAngle, franksCollins, bangBang, lateStance, userDefined, sine, stasis
+	; Knee Controllers: zeroTorque, userDefined, sine, stasis
+	; Ankle Controllers: zeroTorque, PJMC, zhangCollins, userDefined, sine, stasis
 	hipDefaultController = 0
 	kneeDefaultController = 0
 	ankleDefaultController = 0
@@ -58,6 +61,9 @@
 	ankleGearRatio = 4.5
 
 	; the default controller, 0 off, other names can be added if you want to run without connecting to the GUI
+	; Hip Controllers: zeroTorque, heelToe, extensionAngle, franksCollins, bangBang, lateStance, userDefined, sine, stasis
+	; Knee Controllers: zeroTorque, userDefined, sine, stasis
+	; Ankle Controllers: zeroTorque, PJMC, zhangCollins, userDefined, sine, stasis
 	hipDefaultController = bangBang
 	kneeDefaultController = 0
 	ankleDefaultController = PJMC
@@ -85,6 +91,9 @@
 	ankleGearRatio = 4.5
 
 	; the default controller, 0 off, other names can be added if you want to run without connecting to the GUI
+	; Hip Controllers: zeroTorque, heelToe, extensionAngle, franksCollins, bangBang, lateStance, userDefined, sine, stasis
+	; Knee Controllers: zeroTorque, userDefined, sine, stasis
+	; Ankle Controllers: zeroTorque, PJMC, zhangCollins, userDefined, sine, stasis
 	hipDefaultController = bangBang
 	kneeDefaultController = 0
 	ankleDefaultController = 0    
@@ -112,6 +121,9 @@
 	ankleGearRatio = 4.5
 
 	; the default controller, 0 off, other names can be added if you want to run without connecting to the GUI
+	; Hip Controllers: zeroTorque, heelToe, extensionAngle, franksCollins, bangBang, lateStance, userDefined, sine, stasis
+	; Knee Controllers: zeroTorque, userDefined, sine, stasis
+	; Ankle Controllers: zeroTorque, PJMC, zhangCollins, userDefined, sine, stasis
 	hipDefaultController = 0
 	kneeDefaultController = 0
 	ankleDefaultController = PJMC
@@ -133,6 +145,9 @@
 	ankle = AK60v1.1
 
 	; the default controller, 0 off, other names can be added if you want to run without connecting to the GUI
+	; Hip Controllers: zeroTorque, heelToe, extensionAngle, franksCollins, bangBang, lateStance, userDefined, sine, stasis
+	; Knee Controllers: zeroTorque, userDefined, sine, stasis
+	; Ankle Controllers: zeroTorque, PJMC, zhangCollins, userDefined, sine, stasis
 	hipDefaultController = bangBang
 	kneeDefaultController = 0
 	ankleDefaultController = PJMC  
@@ -160,6 +175,9 @@
 	ankle = AK60v1.1
 
 	; the default controller, 0 off, other names can be added if you want to run without connecting to the GUI
+	; Hip Controllers: zeroTorque, heelToe, extensionAngle, franksCollins, bangBang, lateStance, userDefined, sine, stasis
+	; Knee Controllers: zeroTorque, userDefined, sine, stasis
+	; Ankle Controllers: zeroTorque, PJMC, zhangCollins, userDefined, sine, stasis
 	hipDefaultController = bangBang
 	kneeDefaultController = 0
 	ankleDefaultController = PJMC    
@@ -187,6 +205,9 @@
 	ankle = 0
 
 	; the default controller, 0 off, other names can be added if you want to run without connecting to the GUI
+	; Hip Controllers: zeroTorque, heelToe, extensionAngle, franksCollins, bangBang, lateStance, userDefined, sine, stasis
+	; Knee Controllers: zeroTorque, userDefined, sine, stasis
+	; Ankle Controllers: zeroTorque, PJMC, zhangCollins, userDefined, sine, stasis
 	hipDefaultController = bangBang
 	kneeDefaultController = 0
 	ankleDefaultController = 0  
@@ -214,6 +235,9 @@
 	ankle = 0
 
 	; the default controller, 0 off, other names can be added if you want to run without connecting to the GUI
+	; Hip Controllers: zeroTorque, heelToe, extensionAngle, franksCollins, bangBang, lateStance, userDefined, sine, stasis
+	; Knee Controllers: zeroTorque, userDefined, sine, stasis
+	; Ankle Controllers: zeroTorque, PJMC, zhangCollins, userDefined, sine, stasis
 	hipDefaultController = bangBang
 	kneeDefaultController = 0
 	ankleDefaultController = 0  
@@ -241,6 +265,9 @@
 	ankle = AK60v1.1
 
 	; the default controller, 0 off, other names can be added if you want to run without connecting to the GUI
+	; Hip Controllers: zeroTorque, heelToe, extensionAngle, franksCollins, bangBang, lateStance, userDefined, sine, stasis
+	; Knee Controllers: zeroTorque, userDefined, sine, stasis
+	; Ankle Controllers: zeroTorque, PJMC, zhangCollins, userDefined, sine, stasis
 	hipDefaultController = 0
 	kneeDefaultController = 0
 	ankleDefaultController = PJMC  
@@ -268,6 +295,9 @@
 	ankle = AK60v1.1
 
 	; the default controller, 0 off, other names can be added if you want to run without connecting to the GUI
+	; Hip Controllers: zeroTorque, heelToe, extensionAngle, franksCollins, bangBang, lateStance, userDefined, sine, stasis
+	; Knee Controllers: zeroTorque, userDefined, sine, stasis
+	; Ankle Controllers: zeroTorque, PJMC, zhangCollins, userDefined, sine, stasis
 	hipDefaultController = 0
 	kneeDefaultController = 0
 	ankleDefaultController = PJMC    
