Added changes for the stance state when only using the toe FSR. Create PJMC controller

--- a/SDCard/config.ini
+++ b/SDCard/config.ini
@@ -5,7 +5,7 @@
 	version = 0.1
 
 [Exo]
-	name = bilateralHip
+	name = bilateralAnkle
     
 [Battery]
     name = dumb
@@ -132,7 +132,7 @@
     ; filp direction for the torque and angles, 0 neither, left, right, both
 	hipFlipDir = right
 	kneeFlipDir = 0
-	ankleFlipDir = 0
+	ankleFlipDir = right
     
 [leftHipAnkle]
 	sides = left
