Modified PJMC controller and created getter and setter methods for the FSR ground contact thresholds.

--- a/SDCard/config.ini
+++ b/SDCard/config.ini
@@ -130,7 +130,7 @@
     
     
     ; filp direction for the torque and angles, 0 neither, left, right, both
-	hipFlipDir = right
+	hipFlipDir = 0
 	kneeFlipDir = 0
 	ankleFlipDir = right
     
